--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cicleci/ruby@2.4.1
+      - image: cicleci/node@latest
     steps:
       - checkout
       - run: echo "A first hello"
